# slick_sheet_studio

./: .gitignore  CLAUDE.md  Cargo.toml  RALPH_PROMPT.md  Trunk.toml  index.html  manifest.json  sw.js
plans/: HLPP.md  IMPLEMENTATION_PLAN.md  implementation_phase1.md  implementation_phase2.md  implementation_phase3.md  implementation_phase4.md  implementation_phase5.md
plans/archive/: JSON_IMPLEMENTATION_PROMPT.md  JSON_PLAN.md  UI-plan.md  implementation_phase3.md
reviews/: ai_module.md  data_module.md  editor_module.md  final_verdict.md  main_and_config.md  persistence_module.md  template_module.md  templates_directory.md  ui_browser_review.md  world_module.md
src/: lib.rs  main.rs
src/ai/: agent.rs  client.rs  image_gen.rs  mod.rs  prompts.rs  tests.rs  verify.rs
src/ai/tools/: generate_image.rs  mod.rs  read_json.rs  read_template.rs  tests.rs  write_json.rs  write_template.rs
src/data/: defaults.rs  mod.rs  schema.rs  tests.rs  validation.rs
src/editor/: chat_panel.rs  content.rs  edit_modal.rs  image_gallery.rs  image_generator.rs  image_upload.rs  links.rs  mod.rs  settings_modal.rs  state.rs  status_bar.rs  tests.rs
src/images/: loader.rs  mod.rs  store.rs
src/persistence/: export.rs  mod.rs  project.rs  tests.rs
src/template/: engine.rs  mod.rs  parser.rs  tests.rs  validation.rs
src/templates/: mod.rs  tests.rs
src/world/: fonts.rs  mod.rs  tests.rs
