[package]
name = "slick_sheet_studio"
version = "0.1.0"
edition = "2021"
description = "A high-performance web application for creating marketing slick sheets with Typst"
license = "MIT"

# Define the CLI binary
[[bin]]
name = "slick-cli"
path = "src/bin/slick-cli.rs"
required-features = ["cli"]

[features]
default = []
cli = ["clap", "tokio", "reqwest/default-tls"]

[dependencies]
# Core framework
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "Window",
    "Event",
    "KeyboardEvent",
    "MouseEvent",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Url",
    "Navigator",
    "Storage",
    "Location",
    "History",
    "Node",
    "NodeList",
    "CssStyleDeclaration",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    # IndexedDB features
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "DomStringList",
    "DomException",
    # Crypto API
    "Crypto",
    # Clipboard API
    "Clipboard",
] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Typst compiler
typst = "0.12"
typst-pdf = "0.12"
typst-svg = "0.12"
comemo = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async/Networking
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
gloo-net = "0.6"
gloo-timers = "0.3"

# CLI dependencies (optional, enabled by "cli" feature)
clap = { version = "4.4", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"], optional = true }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Base64 encoding
base64 = "0.22"

# Time
chrono = { version = "0.4", default-features = false, features = ["wasmbind", "clock"] }

# UUID for unique IDs
uuid = { version = "1.0", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
